加入 Base/IDataModel.cs 和 Base/IRepositoryBase.cs檔案。

--- a/My.Core.Infrastructures/My.Core.Infrastructures.csproj
+++ b/My.Core.Infrastructures/My.Core.Infrastructures.csproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Base\IUnitofWork.cs" />
+    <Compile Include="Base\IRepositoryBase.cs" />
+    <Compile Include="Base\IDataModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Base\" />
