* My.Core.Infrastructures.csproj: 加入Autofac 3.5.2 套件。
* packages.config: 增加 Autofac 3.5.2 Nuget 套件包設定。

--- a/My.Core.Infrastructures/My.Core.Infrastructures.csproj
+++ b/My.Core.Infrastructures/My.Core.Infrastructures.csproj
@@ -29,15 +29,22 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Autofac">
+      <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Base\IUnitofWork.cs" />
     <Compile Include="Base\IRepositoryBase.cs" />
     <Compile Include="Base\IDataModel.cs" />
+    <Compile Include="Base\IUnitofWorkWithTSQL.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Base\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
