* IDIHost.cs: 加入注入式相依性主機物件介面：IDIHost.cs檔案。
* My.Core.Infrastructures.csproj: 將IDIHost.cs檔案加入專案。

--- a/My.Core.Infrastructures/My.Core.Infrastructures.csproj
+++ b/My.Core.Infrastructures/My.Core.Infrastructures.csproj
@@ -39,9 +39,11 @@
     <Compile Include="Base\IRepositoryBase.cs" />
     <Compile Include="Base\IDataModel.cs" />
     <Compile Include="Base\IUnitofWorkWithTSQL.cs" />
+    <Compile Include="IoC\IDIHost.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Base\" />
+    <Folder Include="IoC\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
