* My.Core.Infrastructures/My.Core.Infrastructures.csproj: 加入檔案   IServiceBase.cs到專案。
* My.Core.Infrastructures/Base/IServiceBase.cs:
  加入IServiceBase.cs(統一邏輯服務層介面)。

--- a/My.Core.Infrastructures/My.Core.Infrastructures.csproj
+++ b/My.Core.Infrastructures/My.Core.Infrastructures.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Base\IUnitofWorkWithTSQL.cs" />
     <Compile Include="IoC\IDIHost.cs" />
     <Compile Include="Logs\ILogWriter.cs" />
+    <Compile Include="Base\IServiceBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Base\" />
