* IAccount.cs: 加入使用者資訊資料表介面：IAccount
* IGroup.cs: 加入使用者群組資料表定義介面：IGroup

* IUserOperationCodeDefine.cs:
  加入使用者操作紀錄資料表定義介面：IUserOperationCodeDefine

* IUserOperationLog.cs: 加入使用者操作紀錄資料表定義介面：IUserOperationLog

* IApplicationRole.cs: 加入系統角色資料表定義介面：IApplicationRole

* IUserProfile.cs: 加入使用者設定資料表定義介面：IUserProfile

* IApplicationUser.cs: 加入系統使用者檢視模型介面：IApplicationUser

* My.Core.Infrastructures.csproj: 加入使用者資訊資料表介面：IAccount
加入系統角色資料表定義介面：IApplicationRole
加入使用者群組資料表定義介面：IGroup
加入使用者操作紀錄資料表定義介面：IUserOperationCodeDefine
加入使用者操作紀錄資料表定義介面：IUserOperationLog
加入使用者設定資料表定義介面：IUserProfile
加入系統使用者檢視模型介面：IApplicationUser
到專案檔中

--- a/My.Core.Infrastructures/My.Core.Infrastructures.csproj
+++ b/My.Core.Infrastructures/My.Core.Infrastructures.csproj
@@ -42,11 +42,21 @@
     <Compile Include="IoC\IDIHost.cs" />
     <Compile Include="Logs\ILogWriter.cs" />
     <Compile Include="Base\IServiceBase.cs" />
+    <Compile Include="Datas\IAccount.cs" />
+    <Compile Include="Datas\IUserProfile.cs" />
+    <Compile Include="ViewModels\IApplicationUser.cs" />
+    <Compile Include="Datas\IUserOperationLog.cs" />
+    <Compile Include="Datas\IUserOperationCodeDefine.cs" />
+    <Compile Include="Datas\IApplicationRole.cs" />
+    <Compile Include="Datas\IGroup.cs" />
+    <Compile Include="Datas\ApplicationUserBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Base\" />
     <Folder Include="IoC\" />
     <Folder Include="Logs\" />
+    <Folder Include="Datas\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
