* IUnitofWork.cs: 新增成員函式定義： GetRepository<>()   ，此函式用來取得其他型別的資料表存取層而不需將參考引入的方法。
* My.Core.Infrastructures.csproj: 增加 儲存庫實作類別和資料夾到專案檔中。

* IAccountRepository.cs: 修改介面繼承自介面IRepositoryBase<>

--- a/My.Core.Infrastructures/My.Core.Infrastructures.csproj
+++ b/My.Core.Infrastructures/My.Core.Infrastructures.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Datas\IUserOperationCodeDefine.cs" />
     <Compile Include="Datas\IApplicationRole.cs" />
     <Compile Include="Datas\IGroup.cs" />
+    <Compile Include="Repositories\IAccountRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Base\" />
@@ -56,6 +57,7 @@
     <Folder Include="Logs\" />
     <Folder Include="Datas\" />
     <Folder Include="ViewModels\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
