* OperationCodeEnum.cs: 增加預先定義的操作紀錄代碼列舉值到專案中。
* AccountRepository.cs: 加入使用者資訊存取層的實作到專案中

* UserOperationLog.cs: 移除 abstract 修飾詞

* My.Core.Infrastructures.Implementations.csproj: 加入以下項目到專案中：
AccountRepository : 使用者資訊存取層實作
OperationCodeEnum: 使用者操作紀錄代碼對應列舉值

--- a/My.Core.Infrastructures.Implementations/My.Core.Infrastructures.Implementations.csproj
+++ b/My.Core.Infrastructures.Implementations/My.Core.Infrastructures.Implementations.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Datas\UserOperationLog.cs" />
     <Compile Include="Datas\ApplicationUserGroup.cs" />
     <Compile Include="Datas\ApplicationUserProfile.cs" />
+    <Compile Include="Repositories\AccountRepository.cs" />
+    <Compile Include="Enums\OperationCodeEnum.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\My.Core.Infrastructures\My.Core.Infrastructures.csproj">
@@ -65,6 +67,8 @@
   <ItemGroup>
     <Folder Include="Datas\" />
     <Folder Include="Repositories\" />
+    <Folder Include="Migrations\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
