--- a/My.Core.Infrastructures/My.Core.Infrastructures.csproj
+++ b/My.Core.Infrastructures/My.Core.Infrastructures.csproj
@@ -50,6 +50,9 @@
     <Compile Include="Datas\IApplicationRole.cs" />
     <Compile Include="Datas\IGroup.cs" />
     <Compile Include="Repositories\IAccountRepository.cs" />
+    <Compile Include="Repositories\IApplicationRoleRepository.cs" />
+    <Compile Include="Repositories\IGroupRepository.cs" />
+    <Compile Include="Repositories\IUserProfileRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Base\" />
