* My.Core.Infrastructures.Implementations.csproj: 加入檔案   AdpplicationRoleRepository.cs檔案到專案中。
* ApplicationRoleRepository.cs: 加入應用程式角色實作類別檔案，並產生實作介面的程式碼。

--- a/My.Core.Infrastructures.Implementations/My.Core.Infrastructures.Implementations.csproj
+++ b/My.Core.Infrastructures.Implementations/My.Core.Infrastructures.Implementations.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Datas\ApplicationUserProfile.cs" />
     <Compile Include="Repositories\AccountRepository.cs" />
     <Compile Include="Enums\OperationCodeEnum.cs" />
+    <Compile Include="Repositories\ApplicationRoleRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\My.Core.Infrastructures\My.Core.Infrastructures.csproj">
