--- a/My.Core.Infrastructures/My.Core.Infrastructures.csproj
+++ b/My.Core.Infrastructures/My.Core.Infrastructures.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Repositories\IApplicationRoleRepository.cs" />
     <Compile Include="Repositories\IGroupRepository.cs" />
     <Compile Include="Repositories\IUserProfileRepository.cs" />
+    <Compile Include="Repositories\IUserOperationCodeDefineRepository.cs" />
+    <Compile Include="Repositories\IUserOperationLogRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Base\" />
