--- a/My.Core.Infrastructures.Implementations/My.Core.Infrastructures.Implementations.csproj
+++ b/My.Core.Infrastructures.Implementations/My.Core.Infrastructures.Implementations.csproj
@@ -71,6 +71,7 @@
     <Folder Include="Repositories\" />
     <Folder Include="Migrations\" />
     <Folder Include="Enums\" />
+    <Folder Include="Base\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
