--- a/My.UnitTest/App.config
+++ b/My.UnitTest/App.config
@@ -5,8 +5,8 @@
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
 	<connectionStrings>
-		<add name="ApplicationDbContext" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=OpenCoreWeb;uid=root;password=!QAZ2wsx" />
-		<add name="Web" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=OpenCoreWeb;uid=root;password=!QAZ2wsx" />
+		<add name="ApplicationDbContext" providerName="MySql.Data.MySqlClient" connectionString="server=192.168.11.10;port=3306;database=OpenCoreWeb;uid=root;password=!QAZ2wsx" />
+		<add name="Web" providerName="MySql.Data.MySqlClient" connectionString="server=192.168.11.10;port=3306;database=OpenCoreWeb;uid=root;password=!QAZ2wsx" />
 	</connectionStrings>
 	<system.data>
 		<DbProviderFactories>
