* App.config: 變更MySql資料庫連線
* My.UnitTest.csproj: 加入系統參照 System.Xml 、 System.Xml.Linq 和
  System.Xml.Serialization。

--- a/My.UnitTest/App.config
+++ b/My.UnitTest/App.config
@@ -6,7 +6,7 @@
 	</configSections>
 	<connectionStrings>
 		<add name="ApplicationDbContext" providerName="MySql.Data.MySqlClient" connectionString="server=192.168.11.10;port=3306;database=OpenCoreWeb;uid=root;password=!QAZ2wsx" />
-		<add name="Web" providerName="MySql.Data.MySqlClient" connectionString="server=192.168.11.10;port=3306;database=OpenCoreWeb;uid=root;password=!QAZ2wsx" />
+		<add name="Web" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=OpenCoreWeb;uid=root;password=!QAZ2wsx" />
 	</connectionStrings>
 	<system.data>
 		<DbProviderFactories>
