--- a/My.UnitTest/My.UnitTest.csproj
+++ b/My.UnitTest/My.UnitTest.csproj
@@ -63,6 +63,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml.Serialization" />
+    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Dynamic" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Test.cs" />
