--- a/My.Core.Infrastructures.Implementations/My.Core.Infrastructures.Implementations.csproj
+++ b/My.Core.Infrastructures.Implementations/My.Core.Infrastructures.Implementations.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Repositories\AccountRepository.cs" />
     <Compile Include="Enums\OperationCodeEnum.cs" />
     <Compile Include="Repositories\ApplicationRoleRepository.cs" />
+    <Compile Include="Repositories\RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\My.Core.Infrastructures\My.Core.Infrastructures.csproj">
