--- a/My.Core.Infrastructures/My.Core.Infrastructures.csproj
+++ b/My.Core.Infrastructures/My.Core.Infrastructures.csproj
@@ -51,7 +51,7 @@
     <Compile Include="IoC\IDIHost.cs" />
     <Compile Include="Logs\ILogWriter.cs" />
     <Compile Include="Base\IServiceBase.cs" />
-    <Compile Include="Repositories\IAccountRepository.cs" />
+    <Compile Include="Repositories\IApplicationUserRepository.cs" />
     <Compile Include="Repositories\IApplicationRoleRepository.cs" />
     <Compile Include="Repositories\IGroupRepository.cs" />
     <Compile Include="Repositories\IUserProfileRepository.cs" />
