[變更] 將檔案名稱 IGroupRepository 改為 IApplicationGroupRepository

--- a/My.Core.Infrastructures/My.Core.Infrastructures.csproj
+++ b/My.Core.Infrastructures/My.Core.Infrastructures.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Base\IServiceBase.cs" />
     <Compile Include="Repositories\IApplicationUserRepository.cs" />
     <Compile Include="Repositories\IApplicationRoleRepository.cs" />
-    <Compile Include="Repositories\IGroupRepository.cs" />
+    <Compile Include="Repositories\IApplicationGroupRepository.cs" />
     <Compile Include="Repositories\IUserProfileRepository.cs" />
     <Compile Include="Repositories\IUserOperationCodeDefineRepository.cs" />
     <Compile Include="Repositories\IUserOperationLogRepository.cs" />
