[變更] 修復使用者建立時候出現重複的帳號在資料庫裡的問題

--- a/My.Core.Infrastructures.Implementations/My.Core.Infrastructures.Implementations.csproj
+++ b/My.Core.Infrastructures.Implementations/My.Core.Infrastructures.Implementations.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Repositories\ApplicationRoleRepository.cs" />
     <Compile Include="Repositories\RepositoryBase.cs" />
     <Compile Include="Repositories\UserOperationCodeDefineRepository.cs" />
+    <Compile Include="Repositories\UserOperationLogRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\My.Core.Infrastructures\My.Core.Infrastructures.csproj">
