--- a/OpenCoreWeb/OpenCoreWeb.csproj
+++ b/OpenCoreWeb/OpenCoreWeb.csproj
@@ -159,9 +159,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_GlobalResources\ControlMUI.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ControlMUI.resx</DependentUpon>
+    </Compile>
+    <Compile Include="App_GlobalResources\PageMUI.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PageMUI.resx</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
-    <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
@@ -178,7 +187,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -277,10 +285,11 @@
     <Content Include="Views\ApplicationUserProfileRefs\Edit.cshtml" />
     <Content Include="Views\ApplicationUserProfileRefs\Index.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\UTCLocalTimeDisplay.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\RoleIDMappingDisplay.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\RoleIDMappingDisplay.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="App_GlobalResources\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -298,6 +307,20 @@
       <Project>{d164eb90-ea2e-4bbb-b781-e55635a96a04}</Project>
       <Name>My.Core.Infrastructures</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="App_GlobalResources\ControlMUI.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ControlMUI.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>OpenCoreWeb.MUI</CustomToolNamespace>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="App_GlobalResources\PageMUI.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>PageMUI.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>OpenCoreWeb.MUI</CustomToolNamespace>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
